[ui] Fix time configuration modes visibility for widgets

--- a/ui/Frontend/public/css/global.css
+++ b/ui/Frontend/public/css/global.css
@@ -164,3 +164,8 @@ th {
     opacity: 1.0;
     filter: Alpha(Opacity=100);
 }
+
+/* Manage visibility of widget time configuration*/
+.time_mode:not(.selected-time-mode) {
+    display : none;
+}
